--- a/scss/_mobHeader.scss
+++ b/scss/_mobHeader.scss
@@ -5,7 +5,7 @@
             z-index: 3;
             position: fixed;
             top: 0;
-            right: 4vw;
+            right: 0;
             bottom: 0px;
             width:60%;
             height: 60vh;
@@ -37,7 +37,7 @@
         position: fixed;
         z-index: 4;
         top: 4vh;
-        right: 10vw;
+        right: 5vw;
         color:white;
         cursor: pointer;
 
